--- a/midterm/Harvard_SP22_story3/Packages/manifest.json
+++ b/midterm/Harvard_SP22_story3/Packages/manifest.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "6.0.3",
+    "com.unity.2d.pixel-perfect": "5.0.0",
+    "com.unity.2d.psdimporter": "5.0.3",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "6.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "2.0.0",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.8",
